Add home page layout and styles

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,1 +1,214 @@
+<!DOCTYPE html>
+<html lang="bn">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FFC-BD Home</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <style>
+        /* Home Specific Styles */
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 15px;
+            background: #252525;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+        }
+        .profile-section {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+        .profile-img {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            background: #444;
+            object-fit: cover;
+            border: 2px solid #ff9800;
+        }
+        .balance-box {
+            background: #ff9800;
+            padding: 5px 15px;
+            border-radius: 20px;
+            color: #000;
+            font-weight: bold;
+        }
+        
+        /* Slider Styles */
+        .slider-container {
+            margin: 20px 15px;
+            height: 150px;
+            background: #2c2c2c;
+            border-radius: 10px;
+            overflow: hidden;
+            position: relative;
+        }
+        .slide {
+            width: 100%;
+            height: 100%;
+            display: none; /* JS will handle display */
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            cursor: pointer;
+        }
+        .slide.active {
+            display: flex;
+            animation: fadeIn 0.5s;
+        }
+        .slide i { font-size: 40px; margin-bottom: 10px; color: #ff9800; }
+        .slide h3 { color: white; }
+        
+        @keyframes fadeIn {
+            from { opacity: 0; } to { opacity: 1; }
+        }
 
+        /* Tournament Buttons */
+        .tournament-section {
+            padding: 15px;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 15px;
+        }
+        .game-box {
+            background: linear-gradient(45deg, #1e1e1e, #2c2c2c);
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+            border: 1px solid #333;
+            cursor: pointer;
+            transition: 0.3s;
+        }
+        .game-box:hover { border-color: #ff9800; transform: translateY(-2px); }
+        .full-width { grid-column: span 2; }
+        .game-box h3 { margin-top: 10px; font-size: 16px; }
+
+        /* Bottom Nav & Footer */
+        .bottom-nav {
+            margin-top: 20px;
+            padding: 15px;
+            text-align: center;
+        }
+        .contact-btn {
+            display: block;
+            width: 100%;
+            padding: 12px;
+            background: #333;
+            color: white;
+            text-decoration: none;
+            border-radius: 8px;
+            margin-bottom: 15px;
+        }
+        .footer-credit {
+            font-size: 12px;
+            color: #666;
+            text-align: center;
+            padding-bottom: 20px;
+        }
+        .rules-icon {
+            position: fixed;
+            bottom: 20px;
+            left: 20px;
+            background: #ff9800;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            font-weight: bold;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.5);
+            cursor: pointer;
+            z-index: 100;
+        }
+    </style>
+</head>
+<body>
+
+    <div class="app-container">
+        <div class="header">
+            <div class="profile-section">
+                <input type="file" id="imgUpload" style="display: none;" accept="image/*">
+                <img src="https://via.placeholder.com/40" id="profilePic" class="profile-img" alt="Profile">
+                <div>
+                    <div id="usernameDisplay" style="font-size: 14px; font-weight: bold;">Loading...</div>
+                    <div onclick="logout()" style="font-size: 11px; color: #ff5555; cursor: pointer;">Log Out</div>
+                </div>
+            </div>
+            <div class="balance-box">
+                ৳ <span id="balanceDisplay">0</span>
+            </div>
+        </div>
+
+        <div class="slider-container" id="sliderBox">
+            <div class="slide active" onclick="openYouTube('https://youtube.com')">
+                <i class="fas fa-wallet"></i>
+                <h3>কিভাবে টাকা অ্যাড করবেন?</h3>
+                <p style="font-size: 12px; color: #aaa;">ভিডিও দেখতে ক্লিক করুন</p>
+            </div>
+            <div class="slide" onclick="openYouTube('https://youtube.com')">
+                <i class="fas fa-gamepad"></i>
+                <h3>কিভাবে টুর্নামেন্ট জয়েন করবেন?</h3>
+                <p style="font-size: 12px; color: #aaa;">ভিডিও দেখতে ক্লিক করুন</p>
+            </div>
+            <div class="slide" onclick="openYouTube('https://youtube.com')">
+                <i class="fas fa-hand-holding-usd"></i>
+                <h3>কিভাবে টাকা উইথড্র করবেন?</h3>
+                <p style="font-size: 12px; color: #aaa;">ভিডিও দেখতে ক্লিক করুন</p>
+            </div>
+        </div>
+
+        <h3 style="padding: 0 15px; margin-top: 10px; color: #ff9800;">টুর্নামেন্ট সিলেক্ট করুন</h3>
+        <div class="tournament-section">
+            <div class="game-box" onclick="goToTournament('BR')">
+                <i class="fas fa-skull-crossbones fa-2x" style="color: #ff4444;"></i>
+                <h3>BR Tournament</h3>
+            </div>
+            <div class="game-box" onclick="goToTournament('CS')">
+                <i class="fas fa-users fa-2x" style="color: #44ff44;"></i>
+                <h3>CS Tournament</h3>
+            </div>
+            <div class="game-box full-width" onclick="goToTournament('LONE')">
+                <i class="fas fa-user-ninja fa-2x" style="color: #4444ff;"></i>
+                <h3>Lone Wolf</h3>
+            </div>
+        </div>
+
+        <div class="bottom-nav">
+            <a href="contact.html" class="contact-btn"><i class="fab fa-whatsapp"></i> Contact Us</a>
+            <a href="wallet.html" class="contact-btn" style="background: #222; border: 1px solid #444;">Add / Withdraw Money</a>
+        </div>
+
+        <div class="footer-credit">
+            Developed by Zord Academy
+        </div>
+
+        <div class="rules-icon" onclick="showRules()">i</div>
+    </div>
+
+    <script type="module" src="../js/main.js"></script>
+    <script>
+        // Simple Navigation Helpers
+        function goToTournament(type) {
+            // Save type to local storage to know which page to load data for
+            localStorage.setItem('selectedGameType', type);
+            window.location.href = 'tournament.html';
+        }
+        function openYouTube(url) {
+            window.open(url, '_blank');
+        }
+        function showRules() {
+            alert("নিয়মাবলী শীঘ্রই অ্যাডমিন প্যানেল থেকে যোগ করা হবে।");
+        }
+        window.logout = function() {
+            localStorage.clear();
+            window.location.href = '../index.html';
+        }
+    </script>
+</body>
+  </html>
