Add contact support page with messaging options

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="bn">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Us</title>
+    <link rel="stylesheet" href="../css/style.css">
+</head>
+<body>
+    <div class="app-container">
+        <div style="padding: 20px; text-align: center;">
+            <h1 class="logo-text">Contact Support</h1>
+            <p>যেকোনো সমস্যায় আমাদের সাথে যোগাযোগ করুন</p>
+            
+            <div class="card" style="margin-top: 30px;">
+                <h3>WhatsApp</h3>
+                <p id="waNum">+880123456789</p>
+                <button class="btn-primary" onclick="window.open('https://wa.me/880123456789')">Message Now</button>
+            </div>
+
+            <div class="card">
+                <h3>Telegram</h3>
+                <p id="tgUser">@FFCBD_Admin</p>
+                <button class="btn-primary" style="background:#0088cc" onclick="window.open('https://t.me/your_username')">Join Channel</button>
+            </div>
+
+            <button class="btn-primary" style="margin-top:20px; background:#444" onclick="history.back()">ফিরে যান</button>
+        </div>
+    </div>
+</body>
+</html>
 
