--- a/register.html
+++ b/register.html
@@ -67,3 +67,65 @@
             }
 
             // Fake
+                <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+        import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+        import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
+        import { firebaseConfig } from './js/config.js';
+
+        // Initialize Firebase with the Database URL
+        const app = initializeApp(firebaseConfig);
+        const auth = getAuth(app);
+        const db = getDatabase(app);
+
+        document.getElementById('regForm').addEventListener('submit', async (e) => {
+            e.preventDefault();
+
+            const user = document.getElementById('regUser').value.trim();
+            const pass = document.getElementById('regPass').value.trim();
+            const confirmPass = document.getElementById('regPassConfirm').value.trim();
+
+            // validation: ইউজারনেমে স্পেস থাকলে তা বাদ দিয়ে ছোট হাতের করে ফেলা (ইমেইল ফরম্যাটের জন্য)
+            const cleanUser = user.toLowerCase().replace(/\s/g, '');
+
+            if (pass !== confirmPass) {
+                alert("পাসওয়ার্ড দুটি মিলছে না!");
+                return;
+            }
+            if (pass.length < 6) {
+                alert("পাসওয়ার্ড অন্তত ৬ সংখ্যার হতে হবে।");
+                return;
+            }
+
+            // Fake Email তৈরি
+            const fakeEmail = cleanUser + "@ffcbd.com";
+
+            try {
+                // ১. Firebase Authentication-এ ইউজার তৈরি
+                const userCredential = await createUserWithEmailAndPassword(auth, fakeEmail, pass);
+                const uid = userCredential.user.uid;
+
+                // ২. Realtime Database-এ ইউজারের ব্যালেন্স ও নাম সেভ করা
+                await set(ref(db, 'users/' + uid), {
+                    username: user, // এখানে আপনার আসল নাম সেভ থাকবে
+                    balance: 0,
+                    password: pass,
+                    uid: uid
+                });
+
+                alert("রেজিস্ট্রেশন সফল হয়েছে! এখন লগইন করুন।");
+                window.location.href = 'index.html';
+
+            } catch (error) {
+                console.error(error);
+                if (error.code === 'auth/email-already-in-use') {
+                    alert("এই ইউজারনেমটি আগেই ব্যবহার করা হয়েছে। অন্য নাম দিন।");
+                } else if (error.code === 'auth/network-request-failed') {
+                    alert("ইন্টারনেট কানেকশন চেক করুন!");
+                } else {
+                    alert("সমস্যা: " + error.message);
+                }
+            }
+        });
+    </script>
+
