--- a/register.html
+++ b/register.html
@@ -16,25 +16,19 @@
             <form id="regForm">
                 <div class="input-group">
                     <label>ইউজারনেম (Username)</label>
-                    <input type="text" id="regUser" placeholder="ইংরেজিতে নাম লিখুন (Ex: Joy123)" required>
+                    <input type="text" id="regUser" placeholder="Ex: joy123" required>
                 </div>
-
                 <div class="input-group">
                     <label>পাসওয়ার্ড (Password)</label>
-                    <input type="password" id="regPass" placeholder="পাসওয়ার্ড দিন" required>
+                    <input type="password" id="regPass" placeholder="কমপক্ষে ৬ সংখ্যা" required>
                 </div>
-
                 <div class="input-group">
-                    <label>কনফার্ম পাসওয়ার্ড (Confirm Password)</label>
-                    <input type="password" id="regPassConfirm" placeholder="পাসওয়ার্ড আবার দিন" required>
+                    <label>কনফার্ম পাসওয়ার্ড</label>
+                    <input type="password" id="regPassConfirm" placeholder="আবার লিখুন" required>
                 </div>
-
                 <button type="submit" class="btn-primary">রেজিস্ট্রেশন করুন</button>
             </form>
-
-            <p class="link-text">
-                আগেই একাউন্ট আছে? <a href="index.html">লগইন করুন</a>
-            </p>
+            <p class="link-text">আগেই একাউন্ট আছে? <a href="index.html">লগইন করুন</a></p>
         </div>
     </div>
 
@@ -42,9 +36,19 @@
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
         import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
         import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
-        import { firebaseConfig } from './js/config.js';
 
-        // Initialize Firebase
+        // আপনার কনফিগ সরাসরি এখানে দিয়ে দিচ্ছি যাতে কোনো ভুল না হয়
+        const firebaseConfig = {
+            apiKey: "AIzaSyBlljkD4UEqNGY2N5_zkEL_r9b50HVkwKA",
+            authDomain: "ffc-bd.firebaseapp.com",
+            projectId: "ffc-bd",
+            storageBucket: "ffc-bd.firebasestorage.app",
+            messagingSenderId: "533178061001",
+            appId: "1:533178061001:web:37517e33f9594290d2bd18",
+            measurementId: "G-NZN55GC3KX",
+            databaseURL: "https://ffc-bd-default-rtdb.firebaseio.com/"
+        };
+
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
         const db = getDatabase(app);
@@ -56,76 +60,40 @@
             const pass = document.getElementById('regPass').value.trim();
             const confirmPass = document.getElementById('regPassConfirm').value.trim();
 
-            // Validation
             if (pass !== confirmPass) {
                 alert("পাসওয়ার্ড দুটি মিলছে না!");
                 return;
             }
-            if (pass.length < 6) {
-                alert("পাসওয়ার্ড অন্তত ৬ সংখ্যার হতে হবে।");
-                return;
-            }
 
-            // Fake
-                <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-        import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-        import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
-        import { firebaseConfig } from './js/config.js';
-
-        // Initialize Firebase with the Database URL
-        const app = initializeApp(firebaseConfig);
-        const auth = getAuth(app);
-        const db = getDatabase(app);
-
-        document.getElementById('regForm').addEventListener('submit', async (e) => {
-            e.preventDefault();
-
-            const user = document.getElementById('regUser').value.trim();
-            const pass = document.getElementById('regPass').value.trim();
-            const confirmPass = document.getElementById('regPassConfirm').value.trim();
-
-            // validation: ইউজারনেমে স্পেস থাকলে তা বাদ দিয়ে ছোট হাতের করে ফেলা (ইমেইল ফরম্যাটের জন্য)
+            // ইউজারনেম ছোট হাতের ও স্পেস ছাড়া করা
             const cleanUser = user.toLowerCase().replace(/\s/g, '');
-
-            if (pass !== confirmPass) {
-                alert("পাসওয়ার্ড দুটি মিলছে না!");
-                return;
-            }
-            if (pass.length < 6) {
-                alert("পাসওয়ার্ড অন্তত ৬ সংখ্যার হতে হবে।");
-                return;
-            }
-
-            // Fake Email তৈরি
             const fakeEmail = cleanUser + "@ffcbd.com";
 
             try {
-                // ১. Firebase Authentication-এ ইউজার তৈরি
+                // ১. ইউজার তৈরি করা
                 const userCredential = await createUserWithEmailAndPassword(auth, fakeEmail, pass);
                 const uid = userCredential.user.uid;
 
-                // ২. Realtime Database-এ ইউজারের ব্যালেন্স ও নাম সেভ করা
+                // ২. ডাটাবেসে তথ্য সেভ করা
                 await set(ref(db, 'users/' + uid), {
-                    username: user, // এখানে আপনার আসল নাম সেভ থাকবে
+                    username: user,
                     balance: 0,
                     password: pass,
                     uid: uid
                 });
 
-                alert("রেজিস্ট্রেশন সফল হয়েছে! এখন লগইন করুন।");
+                alert("রেজিস্ট্রেশন সফল! এখন লগইন করুন।");
                 window.location.href = 'index.html';
 
             } catch (error) {
                 console.error(error);
                 if (error.code === 'auth/email-already-in-use') {
-                    alert("এই ইউজারনেমটি আগেই ব্যবহার করা হয়েছে। অন্য নাম দিন।");
-                } else if (error.code === 'auth/network-request-failed') {
-                    alert("ইন্টারনেট কানেকশন চেক করুন!");
+                    alert("এই নাম বা ইমেইল আগে থেকেই আছে!");
                 } else {
                     alert("সমস্যা: " + error.message);
                 }
             }
         });
     </script>
-
+</body>
+</html>
